update header desing and fixed sticky overlap issue

--- a/sass/app/component/_common.scss
+++ b/sass/app/component/_common.scss
@@ -21,7 +21,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  z-index: 999;
+  z-index: 99999;
 }
 
 .tft-section-space {
